fix overlapping betwwen cards

--- a/Meetup_App/FE/my-vite-project/src/App.css
+++ b/Meetup_App/FE/my-vite-project/src/App.css
@@ -1,3 +1,11 @@
+.meetup-img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
 .meetup-sticky-wrapper {
   position: sticky;
   top: 80px;
